Finalização do componente de calendário de atendimento do paciente

--- a/src/app/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/pagina-inicial/pagina-inicial.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div>
-        <button class="btn btn-warning my-3" [routerLink]="['/calendario-atendimento']">
+        <button class="btn text-white my-3" style="background-color: #df6844;" [routerLink]="['/calendario-atendimento']">
             <i class="far fa-calendar-check fa-lg"></i>
             Calendário Atendimento
         </button>
