--- a/src/app/calendario-atendimento/calendario-atendimento.component.html
+++ b/src/app/calendario-atendimento/calendario-atendimento.component.html
@@ -11,10 +11,17 @@
                         <i class="fas fa-search" style="font-size: 1.18em;"></i>
                     </div>
 
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-8 text-right">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 text-right">
                         <button class="btn btn-success px-5" (click)="abrirDialogCadastro()">
                             <i class="fas fa-plus"></i>
                             Cadastrar Período(s)
+                        </button>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <button class="btn px-5" style="background-color: #B32323; color: white;" (click)="abrirDialogExclusaoPeriodos()">
+                            <i class="fas fa-trash"></i>
+                            Excluir Períodos
                         </button>
                     </div>
                 </div>
@@ -81,7 +88,23 @@
     <div class="mt-2">
         <p-tabView (onChange)="abaTabViewSelecionada($event)">
             <p-tabPanel header="Período" [selected]="true">
-    
+                <div class="row mt-4">
+                    <div class="col-12 col-sm-6">
+                        <span class="p-float-label">
+                            <p-inputMask mask="99/99/9999" [style]="{width: '120px'}" [(ngModel)]="formularioPeriodo.data"> 
+                            </p-inputMask>
+                            <label for="inputtext">Data</label>
+                        </span>
+                    </div>
+
+                    <div class="col-12 col-sm-6">
+                        <span class="p-float-label">
+                            <p-inputMask mask="99:99" [style]="{width: '120px'}" [(ngModel)]="formularioPeriodo.horario"> 
+                            </p-inputMask>
+                            <label for="inputtext">Horário</label>
+                        </span>
+                    </div>
+                </div>
             </p-tabPanel>
     
             <p-tabPanel header="Períodos">
@@ -113,7 +136,11 @@
         </button>
 
         <span *ngIf="indiceAbaTabViewSelecionada === 0">
-
+            <button class="btn btn-success" [disabled]="processandoOperacao || desabilitarBotaoConfirmarCadastroDePeriodo()" 
+                (click)="cadastrarPeriodo()">
+                <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
+                Confirmar
+            </button>
         </span>
 
         <span *ngIf="indiceAbaTabViewSelecionada === 1">    
@@ -136,8 +163,8 @@
     </p-footer>
 </p-dialog>
 
-<!-- Dialog exclusão de Período -->
-<p-dialog [visible]="exibirDialogExclusao" [modal]="true" [resizable]="false" 
+<!-- Dialog exclusão de um Período -->
+<p-dialog [visible]="exibirDialogExclusaoDeUmPeriodo" [modal]="true" [resizable]="false" 
     [blockScroll]="true" [draggable]="false" [closable]="false" [style]="{width: '60vh'}">
 
     <p-header>
@@ -157,6 +184,66 @@
 
         <button class="btn btn-success" [disabled]="processandoOperacao" 
             (click)="excluirPeriodo()">
+            <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
+            Confirmar
+        </button>
+    </p-footer>
+</p-dialog>
+
+<!-- Dialog exclusão de Períodos -->
+<p-dialog [visible]="exibirDialogExclusaoDePeriodos" [modal]="true" [resizable]="false" 
+    [blockScroll]="true" [draggable]="false" [closable]="false" [style]="{width: '60vh'}">
+
+    <p-header>
+        Excluir períodos
+    </p-header>
+
+    <div class="mt-4">
+        <div class="row">
+            <div class="col-12 col-sm-6">
+                <span class="p-float-label">
+                    <p-inputMask mask="99/99/9999" [style]="{width: '120px'}" [(ngModel)]="dataInicialExclusaoPeriodos"> 
+                    </p-inputMask>
+                    <label for="inputtext">Data inicial</label>
+                </span>
+            </div>
+
+            <div class="col-12 col-sm-6">
+                <span class="p-float-label">
+                    <p-inputMask mask="99/99/9999" [style]="{width: '120px'}" [(ngModel)]="dataFinalExclusaoPeriodos"> 
+                    </p-inputMask>
+                    <label for="inputtext">Data final</label>
+                </span>
+            </div>
+        </div>
+
+        <div *ngIf="camposParaExclusaoDePeriodosEstaoValidos()" class="mt-3">
+            <div *ngIf="quantidadePeriodosDisponiveisIntervaloParaExclusao === 0" class="text-danger" style="font-size: 13px;">
+                *Não há períodos de atendimento para serem excluídos no período especificado!
+            </div>
+
+            <div *ngIf="quantidadePeriodosDisponiveisIntervaloParaExclusao === 1">
+                Tem certeza que deseja excluir o período de atendimento que está disponível de <b>{{ dataInicialExclusaoPeriodos }}</b> 
+                à <b>{{ dataFinalExclusaoPeriodos }}</b>?
+            </div>
+
+            <div *ngIf="quantidadePeriodosDisponiveisIntervaloParaExclusao > 1">
+                Tem certeza que deseja excluir <b>todos</b> os <b>{{ quantidadePeriodosDisponiveisIntervaloParaExclusao }}</b> 
+                períodos de atendimento que estão disponíveis de <b>{{ dataInicialExclusaoPeriodos }}</b> 
+                à <b>{{ dataFinalExclusaoPeriodos }}</b>?
+            </div>
+        </div>
+    </div>
+
+    <p-footer>
+        <button class="btn btn-danger" (click)="resetarCampos()">
+            <i class="fas fa-arrow-circle-left"></i>
+            Voltar
+        </button>
+
+        <button class="btn btn-success" [disabled]="processandoOperacao || !camposParaExclusaoDePeriodosEstaoValidos()
+            || quantidadePeriodosDisponiveisIntervaloParaExclusao < 1" 
+            (click)="excluirPeriodos()">
             <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
             Confirmar
         </button>
